...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/foodText"
        app:layout_constraintStart_toEndOf="@+id/foodText"
        app:layout_constraintTop_toTopOf="@+id/foodText" />

    <TextView
        android:id="@+id/zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/zoomText"
        app:layout_constraintStart_toEndOf="@+id/zoomText"
        app:layout_constraintTop_toTopOf="@+id/zoomText" />

    <TextView
        android:id="@+id/energy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/energyText"
        app:layout_constraintStart_toEndOf="@+id/energyText"
        app:layout_constraintTop_toTopOf="@+id/energyText" />

    <TextView
        android:id="@+id/moves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/moveText"
        app:layout_constraintStart_toEndOf="@+id/moveText"
        app:layout_constraintTop_toTopOf="@+id/moveText" />

    <TextView
        android:id="@+id/stores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/homeText"
        app:layout_constraintStart_toEndOf="@+id/homeText"
        app:layout_constraintTop_toTopOf="@+id/homeText" />

...
        android:layout_height="wrap_content"
        android:text="@string/zoom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/energyText" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:onClick="resetClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/eatBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eat"
        android:onClick="eatClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/zoomBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoomBtn"
        android:onClick="zoomClick"
        app:layout_constraintBottom_toTopOf="@+id/eatBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/downBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/down"
        android:onClick="moveClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightBtn" />

    <Button
        android:id="@+id/rightBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/right"
        android:onClick="moveClick"
        app:layout_constraintBottom_toTopOf="@+id/downBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upBtn" />

    <Button
        android:id="@+id/leftbtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/left"
        android:onClick="moveClick"
        app:layout_constraintBottom_toTopOf="@+id/downBtn"
        app:layout_constraintEnd_toStartOf="@+id/downBtn" />
...
